Layout issues

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,19 +1,3 @@
-body {
-  width: 548px;
-  height: 375px;
-  margin: 2px;
-  padding: 0px;
-  /* background:url(pic1.jpg); */
-  /* background-size: cover; */
-  /* background-position: center; */
-  font-family: sans-serif;
-  border-radius: 5px;
-  border-color: #5c74eb;
-  border-width: 2px;
-}
-div#container {
-  vertical-align: middle;
-}
 #dialog {
   background-color: white;
   font-size: 1.33em;
@@ -25,19 +9,6 @@ div#container {
   height: 300px;
   /* border: 1px solid blue;  */
   background-color: lightgrey;
-}
-
-#error {
-  width: 300px;
-  height: 100px;
-  color: red;
-  padding: 20px;
-  margin: 20px;
-  font-size: 16px;
-}
-
-#error p {
-  color: red;
 }
 
 .loginbox {
@@ -107,13 +78,6 @@ div#container {
 .visible {
   visibility: visible;
   position: static;
-}
-
-button {
-  height: 30px;
-  width: 30px;
-  outline: none;
-  margin: 10px;
 }
 
 .optionstable {
@@ -220,27 +184,6 @@ select {
   font-size: 14px;
 }
 
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-  width: 100%;
-  background-color: #5c74eb;
-  color: white;
-  padding: 10px 10px;
-  margin: 5px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type="button"] {
-  background-color: #5c74eb;
-}
-
-input[type="submit"]:hover {
-  background-color: #5c74eb;
-}
-
 .label {
   /* font-style: italic; */
   text-align: right;
@@ -262,10 +205,6 @@ input[type="submit"]:hover {
   font-size: 1.2em;
   border-radius: 2px;
   font-weight: 700;
-}
-
-h3 {
-  font-size: 1.2em;
 }
 
 .headingreference {
@@ -619,14 +558,6 @@ input:checked + .slider:before {
 
 .icon-a {
   color: #5c74eb;
-}
-
-form {
-  border-radius: 10px;
-  border: 1px solid #5c74eb;
-  padding: 10px;
-  width: 100%;
-  /* height:100%; */
 }
 
 .logintable body {
